Got rid og getSingle
