# swagger-output.json
@@ -73,27 +73,6 @@
       }
     },
     "/accounts/{id}": {
-      "get": {
-        "description": "Get one of the accounts",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
       "put": {
         "description": "Update one account",
         "parameters": [
